...
            "state": "translated",
            "value": "Cancelar elección"
          }
        }
      }
    },
    "Try again": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Try again"
...
            "state": "translated",
            "value": "Reintentar"
          }
        }
      }
    },
    "Home": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Home"
...
            "state": "translated",
            "value": "Incluida en %@"
          }
        }
      }
    },
    "Couldn't save feedback": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Couldn't save feedback"
...
            "state": "translated",
            "value": "Cancelar"
          }
        }
      }
    },
    "Your feedback wasn't saved. Please try again.": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Your feedback wasn't saved. Please try again."
...
            "state": "translated",
            "value": "No se han podido cargar las recomendaciones. Inténtalo de nuevo."
          }
        }
      }
    },
    "Recommendations updated.": {
      "extractionState": "manual",
      "localizations": {
        "en": {
          "stringUnit": {
            "state": "translated",
            "value": "Recommendations updated."
...
